add java-time
Signed-off-by: Mingshi Liu <mingshl@amazon.com>